--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                     <i class="fa fa-search"></i> Search</button>
             </form>
         </div>
-        <p class="qtime" style="padding-left: 12%; margin-top: 3%;"></p>
+        <p class="qtime" style="margin-top: 3%;"></p>
         <div class="paginationn">
             <ul id="pagination-demo" class="pagination-sm"></ul>
         </div>
