--- a/views/university.ejs
+++ b/views/university.ejs
@@ -12,7 +12,7 @@
     <script src="/assets/js/jquery-ui.js"></script>
     <link href="/assets/css/jquery-ui.css" rel="stylesheet">
 
-    <!-- <script type="text/javascript" src="/assets/js/script.js"></script> -->
+    <!-- <script type="text/javascript" src="/assets/js/script2.js"></script> -->
     <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
     <!-- <link type="text/css" rel="stylesheet" hr­ef="css/jquery.autocomplete.css" /> -->
     <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
@@ -49,7 +49,7 @@
 
 
 </body>
-<script type="text/javascript" src="/assets/js/script.js"></script>
+<script type="text/javascript" src="/assets/js/script2.js"></script>
 <script type="text/javascript" src="/assets/js/jquery.twbsPagination.js"></script>
 <!-- <link rel="stylesheet" href="js/jquery.autocomplete.css">
 <script src="js/jquery.autocomplete.js" type="text/javascript"></script> -->
